feat: configure backend for railway deployment